plugins/groovy/testdata/highlighting/duplicateNamesInTheFile/FqnImportAndFqnImport.groovy
import java.util.Date
<error descr="Name 'Date' is already defined in file">import java.sql.Date</error>